tests/core/snapshots/async-cache-enable-multiple-resolvers.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server(port: 8000, queryValidation: false) @upstream {
  query: Query
}

type Post {
  body: String
  id: Int!
  taggedUsers: [User] @http(url: "http://jsonplaceholder.typicode.com/taggedUsers/{{.value.id}}", dedupe: true)
  title: String
  user: User @http(url: "http://jsonplaceholder.typicode.com/users/{{.value.userId}}", dedupe: true)
  userId: Int!
}

type Query {
  posts: [Post] @http(url: "http://jsonplaceholder.typicode.com/posts?id=1", dedupe: true)
}

type User {
  id: Int
  name: String
}
