tests/core/snapshots/async-cache-enabled.md_0.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "user": {
            "name": "Leanne Graham"
          }
        },
        {
          "user": {
            "name": "Leanne Graham"
          }
        }
      ]
    }
  }
}
