tests/core/snapshots/auth-basic.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "scalar": "data from public scalar",
      "nested": {
        "name": "nested name"
      }
    }
  }
}
