tests/core/snapshots/auth-basic.md_2.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "errors": [
      {
        "message": "Authentication Failure: Invalid Authorization Header",
        "locations": [
          {
            "line": 2,
            "column": 3
          }
        ]
      }
    ]
  }
}
